--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,7 @@
         "utility": "cpp",
         "new": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Enabled"
+    "C_Cpp.errorSquiggles": "Enabled",
+    "code-runner.clearPreviousOutput": true,
+    "code-runner.runInTerminal": true
 }
